--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: index
-title: Helium Jekyll
-tagline: Bootstrap 4 UI kit for Jekyll
+title: LBTO
+tagline: Luana de Barros - Terapia Ocupacional
 css: 
 js: sliders.js
 keywords: helium, jekyll, bootstrap, UI, kit
-canonical: https://heliumjk.github.io
+canonical: https://lbterapiaocupacional.github.io
 ---
 {% include JB/setup %}
 <!-- Content Area Start -->
