--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@ canonical: https://lbterapiaocupacional.github.io
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="{{ BASE_PATH }}/assets/images/slider/bg-3.jpg" alt="">
+                    <img src="{{ BASE_PATH }}/assets/images/slider/Auriculoterapia.jpg" alt="">
                     <div class="carousel-caption">
-                      <h3 class="slide-title animated fadeInDown"><span class="text-primary">100+ </span> UI Blocks & Components</h3>
-                      <h5 class="slide-text animated fadeIn">Benefits in developing your project with more than 100 blocks available.</h5>
-                      <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Get Started</a>
-                      <a href="https://github.com/heliumjk/heliumjk.github.io/" class="btn btn-lg btn-common animated fadeInUp">Download</a>
+                      <h3 class="slide-title animated fadeInDown"><span class="text-primary">Auriculoterapia </span> Você sabe o que é?</h3>
+                      <h5 class="slide-text animated fadeIn">Conheça os benefícios dessa prática</h5>
+                      <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Saiba mais</a>
                     </div>
                   </div>
                 </div>
