--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ canonical: https://lbterapiaocupacional.github.io
                   <div class="carousel-item">
                     <img src="{{ BASE_PATH }}/assets/images/slider/Auriculoterapia.jpg" alt="">
                     <div class="carousel-caption">
-                      <h3 class="slide-title animated fadeInDown"><span class="text-primary">Auriculoterapia </span> Você sabe o que é?</h3>
-                      <h5 class="slide-text animated fadeIn">Conheça os benefícios dessa prática</h5>
+                      <h3 class="slide-title animated fadeInDown"><span class="text-primary">Auriculoterapia </span> Voce sabe o que e </h3>
+                      <h5 class="slide-text animated fadeIn">Conheca os beneficios dessa pratica</h5>
                       <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Saiba mais</a>
                     </div>
                   </div>
