--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@ canonical: https://lbterapiaocupacional.github.io
                 </ol>
                 <div class="carousel-inner" role="listbox">
                   <div class="carousel-item active">
-                    <img src="{{ BASE_PATH }}/assets/images/slider/auriculoterapia4.jpg" alt="">
+                    <img src="{{ BASE_PATH }}/assets/images/slider/terapiaocupacional.jpg" alt="">
                     <div class="carousel-caption">
-                      <h3 class="slide-title animated fadeInDown"><span class="text-primary">Helium </span> - Teste 4 UI Kit</h3>
-                      <h5 class="slide-text animated fadeIn">Bootstrap 4 based theme ported for Jekyll and GitHub Pages.</h5>
-                      <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Get Started</a>
-                      <a href="https://github.com/heliumjk/heliumjk.github.io/" class="btn btn-lg btn-common animated fadeInUp">Learn More</a>
+                      <h3 class="slide-title animated fadeInDown"><span class="text-primary">Terapia Ocupacional </span> </h3>
+                      <h4 class="slide-text animated fadeIn">Dando vida aos dias </h4>
+                      <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Conheça</a>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -44,7 +43,7 @@ canonical: https://lbterapiaocupacional.github.io
                     <img src="{{ BASE_PATH }}/assets/images/slider/auriculoterapia4.jpg" alt="">
                     <div class="carousel-caption">
                       <h3 class="slide-title animated fadeInDown"><span class="text-primary">Auriculoterapia </span> - Você sabe o que é? </h3>
-                      <h5 class="slide-text animated fadeIn">Conheça os benefícios desse recurso terapêutico</h5>
+                      <h4 class="slide-text animated fadeIn">Conheça os benefícios desse recurso terapêutico</h4>
                       <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Saiba mais</a>
                     </div>
                   </div>
