--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,15 @@
----
+000---
 layout: index
-title: Contact
+title: Contato
 tagline: 
 tags : [contact, components]
 img : 
 img-mobile : 
-author : Antonio Trento
+author : Luana de Barros
 css: 
 js:
 keywords: components, demo
-canonical: https://heliumjk.github.io
+canonical: https://lbterapiaocupacional.github.io
 ---
 {% include JB/setup %}
     <!-- Content Area Start -->
@@ -18,45 +18,45 @@ canonical: https://heliumjk.github.io
         <div class="row">
           <div class="col-md-12">
             <div class="page-header-title">
-              <h2 class="heading-title text-center">Contact Sections</h2>
+              <h2 class="heading-title text-center">Contato</h2>
             </div>
           </div>
         </div>
         <div class="sub-title">
-          <span>Contact Section #1</span>
+          <span>Contato</span>
         </div>
         <div class="row">
           <div class="col-md-8">
-            <h3 class="title-head text-center">Get in touch</h3>
+            <h3 class="title-head text-center">Entre em contato</h3>
             <form class="contact-form" data-toggle="validator">
               <div class="row">
                 <div class="col-sm-4">
                   <div class="form-group">
                     <i class="contact-icon fa fa-user"></i>
-                    <input type="text" class="form-control" id="name" placeholder="Full Name" required data-error="Please enter your name">
+                    <input type="text" class="form-control" id="name" placeholder="Nome" required data-error="Por favor, digite seu nome">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
                 <div class="col-sm-4">
                   <div class="form-group">
                     <i class="contact-icon fa fa-envelope-o"></i>
-                    <input type="email" class="form-control" id="email" placeholder="Email" required data-error="Please enter your email">
+                    <input type="email" class="form-control" id="email" placeholder="Email" required data-error="Por favor, digite seu email">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
                 <div class="col-sm-4">
                   <div class="form-group">
                     <i class="contact-icon fa fa-pencil-square-o"></i>
-                    <input type="text" class="form-control" id="subject" placeholder="Subject" required data-error="Please enter your Subject">
+                    <input type="text" class="form-control" id="subject" placeholder="Assunto" required data-error="Por favor, digite o assunto">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
                 <div class="col-sm-12">
                   <div class="form-group">
-                    <textarea id="message" rows="8" placeholder="Message" required data-error="Please enter your message"></textarea>
+                    <textarea id="message" rows="8" placeholder="Mensagem" required data-error="Por favor, digite sua mensagem"></textarea>
                     <div class="help-block with-errors"></div>
                   </div>
-                  <button type="submit" id="form-submit" class="btn btn-common btn-form-submit">Send Message</button>
+                  <button type="submit" id="form-submit" class="btn btn-common btn-form-submit">Enviar</button>
                   <div id="msgSubmit" class="h3 text-center hidden"></div>
                   <div class="clearfix"></div>
                 </div>
@@ -65,35 +65,28 @@ canonical: https://heliumjk.github.io
           </div>
 
           <div class="col-md-4">
-            <h4 class="contact-info-title">Contact Information</h4>
+            <h4 class="contact-info-title">Informações de contato</h4>
             <div class="contact-info">
               <address>
 							<i class="fa fa-map-marker icons cyan-color contact-info-icon"></i>
-							Level 13, 2 Elizabeth St, Melbourne,
+							Fazenda Rio Grande, Paraná, Brasil
 							<br>
-							Victoria 3000, Australia
 						</address>
               <div class="tel-info">
-                <a href="tel:1800452308"><i class="fa fa-mobile icons cyan-color contact-info-icon"></i>1800 452 308</a>
-                <a href="tel:+61(8)82343555"><i class="fa fa-phone icons cyan-color contact-info-icon"></i>+61 (8) 8234 3555</a>
+                <a href="tel:41996006274"><i class="fa fa-mobile icons cyan-color contact-info-icon"></i>(41) 9 9600 6274</a>
+                <a href="tel:4136082213"><i class="fa fa-phone icons cyan-color contact-info-icon"></i>(41) 3608 2213</a>
               </div>
-              <a href="mailto:hello@spiritapp.com"><i class="fa fa-envelope-o icons cyan-color contact-info-icon"></i>admin@uideck.com</a>
-              <a href="#"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>www.uideck.com</a>
+              <a href="mailto:luanadebarrosto@gmail.com"><i class="fa fa-envelope-o icons cyan-color contact-info-icon"></i>luanadebarrosto@gmail.com</a>
+              <a href="#"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>https://lbterapiaocupacional.github.io</a>
               <ul class="social-links">
                 <li>
-                  <a href="#" class="fa fa-facebook"></a>
+                  <a href="https://www.facebook.com/mundodaterapiaocupacional/" class="fa fa-facebook"></a>
                 </li>
                 <li>
-                  <a href="#" class="fa fa-twitter"></a>
+                  <a href="https://www.instagram.com/mundodaterapiaocupacional/" class="fa fa-instagram"></a>
                 </li>
                 <li>
-                  <a href="#" class="fa fa-instagram"></a>
-                </li>
-                <li>
-                  <a href="#" class="fa fa-linkedin"></a>
-                </li>
-                <li>
-                  <a href="#" class="fa fa-skype"></a>
+                  <a href="https://www.linkedin.com/in/luana-de-barros/" class="fa fa-linkedin"></a>
                 </li>
               </ul>
             </div>
@@ -102,25 +95,25 @@ canonical: https://heliumjk.github.io
         </div>
 
         <div class="mb-60"></div>
-
+<!--
         <div class="sub-title">
           <span>Contact Section #2</span>
         </div>
 
         <div class="row">
           <div class="col-md-4">
-            <h4 class="contact-info-title">Contact Information</h4>
+            <h4 class="contact-info-title">Contato</h4>
             <div class="contact-info">
               <address>
 								<i class="fa fa-map-marker icons cyan-color contact-info-icon"></i>
-								Level 13, 2 Elizabeth St, Melbourne,<br>Victoria 3000, Australia
+								Fazenda Rio Grande, Paraná <br> Brasil
 							</address>
               <div class="tel-info">
-                <a href="tel:1800452308"><i class="fa fa-mobile icons cyan-color contact-info-icon"></i>1800 452 308</a>
-                <a href="tel:+61(8)82343555"><i class="fa fa-phone icons cyan-color contact-info-icon"></i>+61 (8) 8234 3555</a>
+                <a href="tel:41996006274"><i class="fa fa-mobile icons cyan-color contact-info-icon"></i>(41) 9 9600 6274</a>
+                <a href="tel:4136082213"><i class="fa fa-phone icons cyan-color contact-info-icon"></i>(41) 3608 2213</a>
               </div>
-              <a href="mailto:hello@spiritapp.com"><i class="fa fa-envelope-o icons cyan-color contact-info-icon"></i>admin@uideck.com</a>
-              <a href="#"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>www.uideck.com</a>
+              <a href="mailto:luanadebarrosto@gmail.com"><i class="fa fa-envelope-o icons cyan-color contact-info-icon"></i>luanadebarrosto@gmail.com</a>
+              <a href="#"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>https://lbterapiaocupacional.github.io/ </a>
               <ul class="social-links">
                 <li>
                   <a href="#" class="fa fa-facebook"></a>
@@ -180,7 +173,7 @@ canonical: https://heliumjk.github.io
           </div>
           
         </div>
-
+--!>
       </div>
     </div>
     <!-- Content Area End -->
