--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,14 @@ canonical: https://lbterapiaocupacional.github.io
 {% include JB/setup %}
     <!-- Content Area Start -->
     <div id="content">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="page-header-title">
+              <h2 class="heading-title text-center">Contato</h2>
+            </div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-8">
             <h3 class="title-head text-center">Entre em contato</h3>
