--- a/navigations.html
+++ b/navigations.html
@@ -213,9 +213,9 @@ canonical: https://heliumjk.github.io
             <div class="top-menu">
               <p>
                 <span class="left">
-                  <a href="#"><i class="fa fa-map-marker"></i>New South Wales, Sydney</a>
-                  <a href="#"><i class="fa fa-mobile-phone"></i>+9 34476 3244</a>
-                  <a href="#"><i class="fa fa-envelope"></i>email@example.com</a>
+                  <a href="#"><i class="fa fa-map-marker"></i>Fazenda Rio Grande, Paraná, Brasil</a>
+                  <a href="#"><i class="fa fa-mobile-phone"></i>41 9 9600 6274</a>
+                  <a href="#"><i class="fa fa-envelope"></i>luanadebarrosto@gmail.com</a>
               	</span>
                 <span class="right hidden-sm-down">
                   <a href="#"><i class="fa fa-facebook"></i></a>
