--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ canonical: https://lbterapiaocupacional.github.io
                 </div>
                 <a class="carousel-control-prev" href="#carousel-slider" role="button" data-slide="prev">
                   <span class="carousel-control carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
+                  <span class="sr-only">Anterior</span>
                 </a>
                 <a class="carousel-control-next" href="#carousel-slider" role="button" data-slide="next">
                   <span class="carousel-control carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
+                  <span class="sr-only">Próximo</span>
                 </a>
               </div>
             </div>
@@ -204,6 +204,7 @@ canonical: https://lbterapiaocupacional.github.io
         </div>
       </section>
       
+<!--
       <div class="mb-60"></div>
       <div class="container">
         <h4 class="sub-title space-left">Google AD Sense sample</h4>
@@ -212,6 +213,7 @@ canonical: https://lbterapiaocupacional.github.io
 	      {% include ads-block.html %}
 	 </div>		 
       <div class="mb-60"></div>	
+-->
 
       <!-- Team Members 04 -->	
       <div class="container">	                  
