--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ canonical: https://lbterapiaocupacional.github.io
                 <ol class="carousel-indicators">
                   <li data-target="#carousel-slider" data-slide-to="0" class="active"></li>
                   <li data-target="#carousel-slider" data-slide-to="1"></li>
+		  <li data-target="#carousel-slider" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                   <div class="carousel-item active">
@@ -36,6 +37,15 @@ canonical: https://lbterapiaocupacional.github.io
                       <h3 class="slide-title animated fadeInDown"><span class="text-primary">Auriculoterapia </span> - Você sabe o que é? </h3>
                       <h5 class="slide-text animated fadeIn">Conheça os benefícios desse recurso terapêutico</h5>
                       <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Saiba mais</a>
+                    </div>
+                  </div>
+		  <div class="carousel-inner" role="listbox">
+                  <div class="carousel-item active">
+                    <img src="{{ BASE_PATH }}/assets/images/slider/blocos2.jpg" alt="">
+                    <div class="carousel-caption">
+                      <h3 class="slide-title animated fadeInDown"><span class="text-primary">Terapia Ocupacional </span> </h3>
+                      <h5 class="slide-text animated fadeIn">Dando vida aos dias </h5>
+                      <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Conheça</a>
                     </div>
                   </div>
                 </div>
