--- a/index.html
+++ b/index.html
@@ -39,14 +39,12 @@ canonical: https://lbterapiaocupacional.github.io
                       <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Saiba mais</a>
                     </div>
                   </div>
-		  <div class="carousel-inner" role="listbox">
-                  <div class="carousel-item active">
+		  <div class="carousel-item">
                     <img src="{{ BASE_PATH }}/assets/images/slider/blocos2.jpg" alt="">
                     <div class="carousel-caption">
                       <h3 class="slide-title animated fadeInDown"><span class="text-primary">Terapia Ocupacional </span> </h3>
                       <h5 class="slide-text animated fadeIn">Dando vida aos dias </h5>
                       <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Conheça</a>
-                    </div>
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carousel-slider" role="button" data-slide="prev">
