--- a/about-sample.html
+++ b/about-sample.html
@@ -71,6 +71,29 @@ canonical: https://heliumjk.github.io
       <div class="container">
         <div id="single-testimonial-item" class="owl-carousel">
           <!-- Single testimonial Item -->
+            
+            <div class="item">
+            <div class="row justify-content-md-center">
+              <div class="col-md-8 col-xs-12 col-md-auto">
+                <div class="testimonial-inner text-md-center">
+                  <blockquote>
+                    Acompanhe meu trabalho nas redes sociais!                  </blockquote>
+                  <div class="testimonial-images">
+                    <img class="img-circle text-md-center" src="{{ BASE_PATH }}/assets/images/testimonial/img1.jpg" alt="">
+                  </div>
+                  <div class="testimonial-footer">
+                    <i class="fa fa-user"></i> Luana de Barros
+                    <a href="#"> Terapeuta Ocupacional</a>
+                  </div>
+                  <div class="testimonial-footer">
+                    {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-facebook"></i></a>{% endif %}
+                    {% if site.author.instagram %}<a href="href="https://www.instagram.com/{{ site.author.instagram }}/"><i class="fa fa-instagram"></i></a>{% endif %}
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+            
           <div class="item">
             <div class="row justify-content-md-center">
               <div class="col-md-8 col-xs-12 col-md-auto">
