--- a/about-sample.html
+++ b/about-sample.html
@@ -83,6 +83,8 @@ canonical: https://heliumjk.github.io
                   </div>
                   <div class="testimonial-footer">
                     <i class="fa fa-user"></i> Luana de Barros
+                  </div>
+                  <div class="testimonial-footer">
                     <a href="#"> Terapeuta Ocupacional</a>
                   </div>
                   <div class="testimonial-footer">
