--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+s---
 layout: index
 title: LBTO
 tagline: Luana de Barros - Terapia Ocupacional
@@ -59,19 +59,19 @@ canonical: https://lbterapiaocupacional.github.io
 	<div id="features" class="container">
 	<!-- SERVICES -->
             <div class="sub-title">
-              <span>Features</span>
+              <span>Serviços</span>
             </div>
             <div class="row">
               <!-- Start Service Icon 1 -->
               <div class="col-md-4 col-sm-6">
                 <div class="service-box">
                   <div class="service-icon">
-                    <i class="fa fa-cogs"></i>
+                    <i class="fa fa-check"></i>
                   </div>
                   <div class="service-content">
-                    <h4><a href="#">Easy to Customize</a></h4>
+                    <h4><a href="#">Atendimento domiciliar individual</a></h4>
                     <p>
-                      Thanks to the basic knowledge of HTML CSS and JavaScript languages you can quickly change this theme according to your needs.
+                      A melhor reabilitação é aquela que acontece no cotidiano. Entre em contato para saber as localizações atendidas.
                     </p>
                   </div>
                 </div>
@@ -82,12 +82,12 @@ canonical: https://lbterapiaocupacional.github.io
               <div class="col-md-4 col-sm-6">
                 <div class="service-box">
                   <div class="service-icon">
-                    <i class="fa fa-cubes"></i>
+                    <i class="fa fa-check"></i>
                   </div>
                   <div class="service-content">
-                    <h4><a href="#">100+ Components</a></h4>
+                    <h4><a href="#">Desenvolvimento infantil</a></h4>
                     <p>
-                      Thanks to the multitude of available blocks, you will be able to create professional layouts.
+                      Intervenção nas alterações do desenvolvimento, déficits sensoriais, inclusão escolar e adaptação de rotina. 
                     </p>
                   </div>
                 </div>
@@ -98,12 +98,12 @@ canonical: https://lbterapiaocupacional.github.io
               <div class="col-md-4 col-sm-6">
                 <div class="service-box">
                   <div class="service-icon">
-                    <i class="fa fa-tachometer"></i>
+                    <i class="fa fa-check"></i>
                   </div>
                   <div class="service-content">
-                    <h4><a href="#">Super Fast</a></h4>
+                    <h4><a href="#">Alterações fisicas e neurológicas</a></h4>
                     <p>
-                      By using Jekyll as a preprocessor you will have a tremendous result in terms of loading speeds.
+                      Diagnóstico não é destino. Não importa a idade, a busca por autonomia e independência é o alvo da Terapia Ocupacional.
                     </p>
                   </div>
                 </div>
@@ -117,9 +117,9 @@ canonical: https://lbterapiaocupacional.github.io
                     <i class="fa fa-check"></i>
                   </div>
                   <div class="service-content">
-                    <h4><a href="#">Clean Design</a></h4>
+                    <h4><a href="#">Confecção de órteses e tecnologias assistivas</a></h4>
                     <p>
-                      Helium is designed to be clean and pleasant to navigate.
+                      Reduzindo a dor, quebrando padrões, possibilitando maior participação no cotidiano.
                     </p>
                   </div>
                 </div>
@@ -130,12 +130,12 @@ canonical: https://lbterapiaocupacional.github.io
               <div class="col-md-4 col-sm-6">
                 <div class="service-box">
                   <div class="service-icon">
-                    <i class="fa fa-flash"></i>
+                    <i class="fa fa-check"></i>
                   </div>
                   <div class="service-content">
-                    <h4><a href="#">Bootstrap 4 UI Kit</a></h4>
+                    <h4><a href="#">Atendimento grupal</a></h4>
                     <p>
-                      This theme uses the latest bootstrap framework 4 to have a modern, well-structured, versatile layout.
+                      É no encontro com o outro que a vida acontece.
                     </p>
                   </div>
                 </div>
@@ -146,12 +146,12 @@ canonical: https://lbterapiaocupacional.github.io
               <div class="col-md-4 col-sm-6">
                 <div class="service-box">
                   <div class="service-icon">
-                    <i class="fa fa-hand-pointer-o"></i>
+                    <i class="fa fa-check"></i>
                   </div>
                   <div class="service-content">
-                    <h4><a href="#">Advanced Features</a></h4>
+                    <h4><a href="#">Auriculoterapia</a></h4>
                     <p>
-                      Systems like disqus, google AdSense, google analytics, Google maps are integrated.
+                      Cuidado em pontos.
                     </p>
                   </div>
                 </div>
