--- a/index.html
+++ b/index.html
@@ -205,104 +205,70 @@ canonical: https://lbterapiaocupacional.github.io
       </section>
       <div class="mb-60"></div>
 
-      <!-- Team Members 04 -->	
-      <div class="container">	                  
-            <div class="team-members-tow mtb-50">
+      <!-- Team Members 02 -->
+           <div class="team-members mtb-50">
               <div class="sub-title">
-                <span>Team Members</span>
+                <span>Siga nas redes sociais</span>
               </div>
-              <div class="row">
+	      <div class="row">
                 <div class="col-sm-6 col-md-3">
                   <!-- Team Item Starts -->
-                  <figure>
-                    <img src="{{ BASE_PATH }}/assets/images/team/team-05.jpg" alt="">
-                    <div class="image-overlay">
-                      <div class="overlay-text text-center">
-                        <div class="info-text">
-                          <strong>Melody Clark</strong>
-                          <span>UX Specialist</span>
+                  <div class="team-item">
+                    <figure class="team-profile">
+                      <img src="{{ BASE_PATH }}/assets/images/team/team-02.jpg" alt="">
+                      <figcaption class="our-team">
+                        <div class="details">
+                          <p class="content-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <hr class="small-divider border-white">
+                          <div class="social">
+                            {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-2x fa-facebook"></i></a>{% endif %}
+                            {% if site.author.instagram %}<a href="https://www.instagram.com/{{ site.author.instagram }}/"><i class="fa fa-2x fa-instagram"></i></a>{% endif %}
+                          </div>
                         </div>
-                        <hr class="small-divider border-white">
-                        <ul class="social-icons">
-                          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
-                      </div>
+                      </figcaption>
+                    </figure>
+                    <div class="info">
+                      <h2>
+                        Mundo da Terapia Ocupacional
+                      </h2>
+                      <p>
+                        Blog
+                      </p>
                     </div>
-                  </figure>
-                  <!-- Team Item Ends -->
-                </div>
-                <div class="col-sm-6 col-md-3">
+                  </div>
                   <!-- Team Item Starts -->
-                  <figure>
-                    <img src="{{ BASE_PATH }}/assets/images/team/team-06.jpg" alt="">
-                    <div class="image-overlay">
-                      <div class="overlay-text text-center">
-                        <div class="info-text">
-                          <strong>Danny Burton</strong>
-                          <span>Senior Designer</span>
-                        </div>
-                        <hr class="small-divider border-white">
-                        <ul class="social-icons">
-                          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </figure>
-                  <!-- Team Item Ends -->
                 </div>
 
                 <div class="col-sm-6 col-md-3">
                   <!-- Team Item Starts -->
-                  <figure>
-                    <img src="{{ BASE_PATH }}/assets/images/team/team-07.jpg" alt="">
-                    <div class="image-overlay">
-                      <div class="overlay-text text-center">
-                        <div class="info-text">
-                          <strong>Elizabeth Jones</strong>
-                          <span>Art Director</span>
+                  <div class="team-item">
+                    <figure class="team-profile">
+                      <img src="{{ BASE_PATH }}/assets/images/team/team-03.jpg" alt="">
+                      <figcaption class="our-team">
+                        <div class="details">
+                          <p class="content-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <hr class="small-divider border-white">
+                          <div class="social">
+                            {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-facebook"></i></a>{% endif %}
+                 	    {% if site.author.linkedin %}<a href="https://www.linkedin.com/in/{{ site.author.linkedin }}/"><i class="fa fa-linkedin"></i></a>{% endif %}
+                            {% if site.author.instagram %}<a href="https://www.instagram.com/{{ site.author.instagram }}/"><i class="fa fa-instagram"></i></a>{% endif %}
+                          </div>
                         </div>
-                        <hr class="small-divider border-white">
-                        <ul class="social-icons">
-                          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
-                      </div>
+                      </figcaption>
+                    </figure>
+                    <div class="info">
+                      <h2>
+                        Luana de Barros
+                      </h2>
+                      <p>
+                        Terapeuta Ocupacional
+                      </p>
                     </div>
-                  </figure>
+                  </div>
                   <!-- Team Item Ends -->
                 </div>
-
-                <div class="col-sm-6 col-md-3">
-                  <!-- Team Item Starts -->
-                  <figure>
-                    <img src="{{ BASE_PATH }}/assets/images/team/team-08.jpg" alt="">
-                    <div class="image-overlay">
-                      <div class="overlay-text text-center">
-                        <div class="info-text">
-                          <strong>Danny Burton</strong>
-                          <span>Senior Designer</span>
-                        </div>
-                        <hr class="small-divider border-white">
-                        <ul class="social-icons">
-                          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </figure>
-                  <!-- Team Item Ends -->
-                </div>
-
-              </div>
-            </div>            	      	      	      
-      </div>      
-      <!-- End Team Members 04 -->      	
+            </div>
+      <!-- End Team Members 02 -->      	
 	
 	
       <div class="mb-60"></div>
