--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@ canonical: https://lbterapiaocupacional.github.io
                   <!-- Team Item Ends -->
                 </div>
             </div>
+	</div>
+	   
       <!-- End Team Members 02 -->      	
 	
 	
