--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ canonical: https://lbterapiaocupacional.github.io
       <div class="mb-60"></div>
 
       <!-- Team Members 02 -->
+	<div class="container">
            <div class="team-members mtb-50">
               <div class="sub-title">
                 <span>Siga nas redes sociais</span>
@@ -268,8 +269,8 @@ canonical: https://lbterapiaocupacional.github.io
                   <!-- Team Item Ends -->
                 </div>
             </div>
-	</div>
-	   
+	  </div>
+	</div>  
       <!-- End Team Members 02 -->      	
 	
 	
