--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@ canonical: https://lbterapiaocupacional.github.io
                           <p class="content-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                           <hr class="small-divider border-white">
                           <div class="social">
-                            {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-facebook"></i></a>{% endif %}
-                 	    {% if site.author.linkedin %}<a href="https://www.linkedin.com/in/{{ site.author.linkedin }}/"><i class="fa fa-linkedin"></i></a>{% endif %}
-                            {% if site.author.instagram %}<a href="https://www.instagram.com/{{ site.author.instagram }}/"><i class="fa fa-instagram"></i></a>{% endif %}
+                            {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-2x fa-facebook"></i></a>{% endif %}
+                 	    {% if site.author.linkedin %}<a href="https://www.linkedin.com/in/{{ site.author.linkedin }}/"><i class="fa fa-2x fa-linkedin"></i></a>{% endif %}
+                            {% if site.author.instagram %}<a href="https://www.instagram.com/{{ site.author.instagram }}/"><i class="fa fa-2x fa-instagram"></i></a>{% endif %}
                           </div>
                         </div>
                       </figcaption>
