--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ canonical: https://lbterapiaocupacional.github.io
                       <img src="{{ BASE_PATH }}/assets/images/team/team-02.jpg" alt="">
                       <figcaption class="our-team">
                         <div class="details">
-                          <p class="content-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <p class="content-white">Redes sociais do Blog Mundo da Terapia Ocupacional</p>
                           <hr class="small-divider border-white">
                           <div class="social">
                             {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-2x fa-facebook"></i></a>{% endif %}
@@ -247,7 +247,7 @@ canonical: https://lbterapiaocupacional.github.io
                       <img src="{{ BASE_PATH }}/assets/images/team/team-03.jpg" alt="">
                       <figcaption class="our-team">
                         <div class="details">
-                          <p class="content-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <p class="content-white">Perfil profissional nas redes sociais</p>
                           <hr class="small-divider border-white">
                           <div class="social">
                             {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-2x fa-facebook"></i></a>{% endif %}
