--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ canonical: https://lbterapiaocupacional.github.io
             <div class="mb-60"></div>
 	
 	<!-- HEADER -->
-      <div class="header-style-3">
+     <!-- <div class="header-style-3">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-6">
@@ -178,9 +178,9 @@ canonical: https://lbterapiaocupacional.github.io
             </div>
           </div>
         </div>
-      </div>	
+      </div>	-->
 	<!-- END HEADER -->
-            <div class="mb-60"></div>
+        <!--    <div class="mb-60"></div>
 	
       <div class="container">
         <h4 class="sub-title space-left">Mobile scroll blog carousel</h4>
@@ -202,7 +202,7 @@ canonical: https://lbterapiaocupacional.github.io
            {% endfor %}     
           </div>              
         </div>
-      </section>
+      </section> -->
       <div class="mb-60"></div>
 
       <!-- Team Members 02 -->
