--- a/index.html
+++ b/index.html
@@ -185,9 +185,10 @@ canonical: https://lbterapiaocupacional.github.io
       <div class="container">
         <h4 class="sub-title space-left">Mobile scroll blog carousel</h4>
       </div>
-
+-->
+	
       <!-- posts carousel -->
-      <section id="blog">
+      <!--<section id="blog">
         <div class="container">                              
           <div id="posts-carousel" class="owl-carousel">
            {% for post in site.posts %}     
@@ -260,6 +261,7 @@ canonical: https://lbterapiaocupacional.github.io
                     <div class="info">
                       <h2>
                         Luana de Barros
+			     <br/>
                       </h2>
                       <p>
                         Terapeuta Ocupacional
