--- a/index.html
+++ b/index.html
@@ -208,16 +208,17 @@ canonical: https://lbterapiaocupacional.github.io
 
       <!-- Team Members 02 -->
 	<div class="container">
-           <div class="team-members mtb-50">
+           <!-- Team Members 02 -->
+            <div class="team-members mtb-50">
               <div class="sub-title">
-                <span>Siga nas redes sociais</span>
+                <span>Team Members #1 / 4 Columns</span>
               </div>
-	      <div class="row">
+              <div class="row">
                 <div class="col-sm-6 col-md-3">
                   <!-- Team Item Starts -->
                   <div class="team-item">
                     <figure class="team-profile">
-                      <img src="{{ BASE_PATH }}/assets/images/team/team-02.jpg" alt="">
+                      <img src="{{ BASE_PATH }}/assets/images/team/team-01.jpg" alt="">
                       <figcaption class="our-team">
                         <div class="details">
                           <p class="content-white">Redes sociais do Blog Mundo da Terapia Ocupacional</p>
@@ -238,21 +239,20 @@ canonical: https://lbterapiaocupacional.github.io
                       </p>
                     </div>
                   </div>
-                  <!-- Team Item Starts -->
+                  <!-- Team Item Ends -->
                 </div>
-
                 <div class="col-sm-6 col-md-3">
                   <!-- Team Item Starts -->
                   <div class="team-item">
                     <figure class="team-profile">
-                      <img src="{{ BASE_PATH }}/assets/images/team/team-03.jpg" alt="">
+                      <img src="{{ BASE_PATH }}/assets/images/team/team-02.jpg" alt="">
                       <figcaption class="our-team">
                         <div class="details">
                           <p class="content-white">Perfil profissional nas redes sociais</p>
                           <hr class="small-divider border-white">
                           <div class="social">
                             {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-2x fa-facebook"></i></a>{% endif %}
-                 	    
+                 	    {% if site.author.linkedin %}<a href="https://www.linkedin.com/in/{{ site.author.linkedin }}/"><i class="fa fa-2x fa-linkedin"></i></a>{% endif %}
                             {% if site.author.instagram %}<a href="https://www.instagram.com/{{ site.author.instagram }}/"><i class="fa fa-2x fa-instagram"></i></a>{% endif %}
                           </div>
                         </div>
@@ -261,17 +261,18 @@ canonical: https://lbterapiaocupacional.github.io
                     <div class="info">
                       <h2>
                         Luana de Barros
-			     <br/>
                       </h2>
                       <p>
                         Terapeuta Ocupacional
                       </p>
                     </div>
                   </div>
-                  <!-- Team Item Ends -->
+                  <!-- Team Item Starts -->
                 </div>
+
+              </div>
             </div>
-	  </div>
+            <!-- End Team Members 02 -->
 	</div>  
       <!-- End Team Members 02 -->      	
 	
