--- a/index.html
+++ b/index.html
@@ -260,8 +260,12 @@ canonical: https://lbterapiaocupacional.github.io
                     </figure>
                     <div class="info">
                       <h2>
-                        Luana de Barros
+                        Luana
                       </h2>
+		      <h2>
+                        de Barros
+                      </h2>
+    
                       <p>
                         Terapeuta Ocupacional
                       </p>
