--- a/index.html
+++ b/index.html
@@ -232,7 +232,10 @@ canonical: https://lbterapiaocupacional.github.io
                     </figure>
                     <div class="info">
                       <h2>
-                        Mundo da Terapia Ocupacional
+                        Mundo da Terapia
+                      </h2>
+		      <h2>
+                        Ocupacional
                       </h2>
                       <p>
                         Blog
