--- a/index.html
+++ b/index.html
@@ -224,8 +224,9 @@ canonical: https://lbterapiaocupacional.github.io
                           <p class="content-white">Redes sociais do Blog Mundo da Terapia Ocupacional</p>
                           <hr class="small-divider border-white">
                           <div class="social">
-                            {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-2x fa-facebook"></i></a>{% endif %}
-                            {% if site.author.instagram %}<a href="https://www.instagram.com/{{ site.author.instagram }}/"><i class="fa fa-2x fa-instagram"></i></a>{% endif %}
+			    <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                            <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                            <a class="google-plus" href="#"><i class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </figcaption>
@@ -254,9 +255,9 @@ canonical: https://lbterapiaocupacional.github.io
                           <p class="content-white">Perfil profissional nas redes sociais</p>
                           <hr class="small-divider border-white">
                           <div class="social">
-                            {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-2x fa-facebook"></i></a>{% endif %}
-                 	    {% if site.author.linkedin %}<a href="https://www.linkedin.com/in/{{ site.author.linkedin }}/"><i class="fa fa-2x fa-linkedin"></i></a>{% endif %}
-                            {% if site.author.instagram %}<a href="https://www.instagram.com/{{ site.author.instagram }}/"><i class="fa fa-2x fa-instagram"></i></a>{% endif %}
+                            <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                            <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                            <a class="google-plus" href="#"><i class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </figcaption>
