--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ canonical: https://lbterapiaocupacional.github.io
            <!-- Team Members 02 -->
             <div class="team-members mtb-50">
               <div class="sub-title">
-                <span>Team Members #1 / 4 Columns</span>
+                <span>Siga nas redes sociais!</span>
               </div>
               <div class="row">
                 <div class="col-sm-6 col-md-3">
