--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ canonical: https://lbterapiaocupacional.github.io
                 <a href="tel:41996006274"><i class="fa fa-mobile icons cyan-color contact-info-icon"></i>(41) 9 9600 6274</a>
                 <a href="tel:4136082213"><i class="fa fa-phone icons cyan-color contact-info-icon"></i>(41) 3608 2213</a>
               </div>
-              <a href="mailto:luanadebarrosto@gmail.com"><i class="fa fa-envelope-o icons cyan-color contact-info-icon"></i>luanadebarrosto@gmail.com</a>
+              <a href="mailto:luanadebarros.to@gmail.com"><i class="fa fa-envelope-o icons cyan-color contact-info-icon"></i>luanadebarros.to@gmail.com</a>
               <a href="https://lbterapiaocupacional.github.io/"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>https://lbterapiaocupacional.github.io/</a>
               {% include social-block.html %}
             </div>
